# rewirescope-dynamic-dependency

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.streamlit/: config.toml
app/: Overview.py  streamlit_app.py
app/pages/: 1_Observed_Rewiring_Core.py  2_Phenology_Silent_Edge.py  3_Dependency_Concentration.py  4_Historical_Interaction_Archive.py  5_Disturbance_Rewiring.py  6_Trophic_Timing_Risk.py
data/: README.md
data/metadata/: dataset_sources.yml  source_buildability.yml
docs/: classification_schema.md  concept_note.md  context_digest.md  dataset_inventory.md  library_landscape.md  metric_definitions.md  scientific_rationale.md  validation_plan.md
notebooks/: 00_dataset_audit.ipynb  01_rmbl_moving_pollination_graph.ipynb  02_lazaro_disturbance_rewiring.ipynb  03_burkle_interaction_extinction.ipynb  04_ecomon_trophic_timing.ipynb  05_helgoland_plankton_network_shift.ipynb  99_figures_for_demo.ipynb
outputs/notion_figures/: manifest.json  notion_figure_legends.md  rewirescope_figure_1.html  rewirescope_figure_2.html  rewirescope_figure_3.html
outputs/tables/: decision_signal_summary.csv  lazaro_workbook_audit.csv  (+1 more)
scripts/: audit_datasets.py  build_processed_data.py  download_datasets.py  export_demo_assets.py  export_notion_figures.py  run_burkle_demo.py  run_ecomon_demo.py  run_helgoland_demo.py  run_lazaro_demo.py  run_rmbl_demo.py
tests/: test_decision_signal.py  test_dependency_concentration.py  test_edge_turnover.py  test_evidence.py  test_silent_edge_failure.py  test_terminal_outputs.py  test_terminal_smoke.py
(+35 files in other folders)
